# rayca-core

./: Cargo.toml  README.md
shaders/: present.frag.slang
src/: asset.rs  buffer.rs  command.rs  ctx.rs  debug.rs  descriptor.rs  device.rs  events.rs  fallback.rs  frame.rs  gfx.rs  image.rs  lib.rs  model.rs  pass.rs  pipeline.rs  primitive.rs  queue.rs  sampler.rs  scene.rs  shader.rs  slang.rs  surface.rs  swapchain.rs  sync.rs  win.rs
