[package]
name = "rayca-core"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "The core of the Rayca project"
license = "MIT"
readme = "README.md"

[dependencies]
winit = { version = "0.30.*", features = [ "android-native-activity" ] }
ash = "0.38.*"
rayca-geometry = { git = "https://github.com/fahien/rayca-geometry.git" }
rayca-gltf = { git = "https://github.com/fahien/rayca-gltf.git" }
rayca-pipe = { git = "https://github.com/fahien/rayca-pipe.git" }
vk-mem = "0.4.*"
png = "0.17.*"
image = "0.25.6"
rayon = "1.10.0"

[target.'cfg(not(target_os="android"))'.dependencies]
slang = { git = "https://github.com/Fahien/slang-rs" }

[target.'cfg(target_os="macos")'.dependencies]
raw-window-metal = "1.1.0"
